[package]
name = "example-payment-gateway-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"

tokio = { version = "1.41.0", features = ["full"] }


sea-orm = { version = "1.1.0", features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
  "sqlx-sqlite"
] }
sea-orm-migration = "1.1.0"

async-trait = "0.1.83"
thiserror = "1.0.66"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"

serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
actix-multipart = "0.7.2"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.18.1", features = ["derive"] }


uuid = { version = "1.11.0", features = ["serde", "v4"] }
futures-util = "0.3.31"
rand = "0.8.5"
env_logger = "0.11.5"
dotenv = "0.15.0"
regex = "1.11.1"

axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["cookie"] }
tower-http = { version = "0.6.1", features = ["cors"] }
mockall = "0.13.1"

[dev-dependencies]
sea-orm-migration = "1.1.0"
