[package]
name = "example-payment-gateway-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"

tokio = { version = "1.41.0", features = ["full"] }


sea-orm = { version = "1.1.0", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
sea-orm-migration = "1.1.0"

async-trait = "0.1.83"
thiserror = "2.0.11"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.0"

serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
actix-multipart = "0.7.2"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }


uuid = { version = "1.11.0", features = ["serde", "v4"] }
futures-util = "0.3.31"
rand = "0.9.0"
env_logger = "0.11.5"
dotenv = "0.15.0"
regex = "1.11.1"

axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
tower-http = { version = "0.6.1", features = ["cors"] }
mockall = "0.13.0"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = "0.2.0"


[dev-dependencies]
sea-orm-migration = "1.1.0"
